This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Fix signatures of tp_clear handlers
Type: behavior Stage: resolved
Components: Extension Modules Versions: Python 3.8, Python 3.7, Python 3.6, Python 2.7
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: miss-islington, rhettinger, serhiy.storchaka
Priority: normal Keywords: patch

Created on 2018-05-29 07:06 by serhiy.storchaka, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 7196 merged serhiy.storchaka, 2018-05-29 07:17
PR 7269 merged miss-islington, 2018-05-31 04:35
PR 7270 merged miss-islington, 2018-05-31 04:38
PR 7277 merged serhiy.storchaka, 2018-05-31 06:09
Messages (5)
msg317986 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-05-29 07:06
The tp_clear handler should be a pointer to the function that returns int.

    typedef int (*inquiry)(PyObject *);

Two handlers in the stdlib (for AST and deque objects) return void instead. The following PR fixes this.
msg318244 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-05-31 04:34
New changeset a5c42284e69fb309bdd17ee8c1c120d1be383012 by Serhiy Storchaka in branch 'master':
bpo-33677: Fix signatures of tp_clear handlers for AST and deque. (GH-7196)
https://github.com/python/cpython/commit/a5c42284e69fb309bdd17ee8c1c120d1be383012
msg318252 - (view) Author: miss-islington (miss-islington) Date: 2018-05-31 05:31
New changeset a4dd46a47fe1d4fe1f1738c2f5b3712de41056b9 by Miss Islington (bot) in branch '3.7':
bpo-33677: Fix signatures of tp_clear handlers for AST and deque. (GH-7196)
https://github.com/python/cpython/commit/a4dd46a47fe1d4fe1f1738c2f5b3712de41056b9
msg318256 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-05-31 06:10
New changeset 0fe3be03926c3468ed4c10980d1a030c8ef4e37e by Serhiy Storchaka (Miss Islington (bot)) in branch '3.6':
bpo-33677: Fix signatures of tp_clear handlers for AST and deque. (GH-7196) (GH-7269)
https://github.com/python/cpython/commit/0fe3be03926c3468ed4c10980d1a030c8ef4e37e
msg318263 - (view) Author: Serhiy Storchaka (serhiy.storchaka) * (Python committer) Date: 2018-05-31 07:32
New changeset db1074244d2c12961799f6f9353ae191f59cc497 by Serhiy Storchaka in branch '2.7':
[2.7] bpo-33677: Fix the signature of tp_clear handler for deque. (GH-7196). (GH-7277)
https://github.com/python/cpython/commit/db1074244d2c12961799f6f9353ae191f59cc497
History
Date User Action Args
2022-04-11 14:59:01adminsetgithub: 77858
2018-05-31 07:33:27serhiy.storchakasetstatus: open -> closed
resolution: fixed
stage: patch review -> resolved
2018-05-31 07:32:46serhiy.storchakasetmessages: + msg318263
2018-05-31 06:10:30serhiy.storchakasetmessages: + msg318256
2018-05-31 06:09:51serhiy.storchakasetpull_requests: + pull_request6902
2018-05-31 05:31:24miss-islingtonsetnosy: + miss-islington
messages: + msg318252
2018-05-31 04:38:02miss-islingtonsetpull_requests: + pull_request6897
2018-05-31 04:35:57miss-islingtonsetpull_requests: + pull_request6896
2018-05-31 04:34:37serhiy.storchakasetmessages: + msg318244
2018-05-29 07:17:29serhiy.storchakasetkeywords: + patch
stage: patch review
pull_requests: + pull_request6830
2018-05-29 07:06:44serhiy.storchakacreate