[2.7] bpo-33677: Fix signatures of tp_clear handlers for AST and deque. (GH-7196). (cherry picked from commit a5c42284e69fb309bdd17ee8c1c120d1be383012)

Co-authored-by: Serhiy Storchaka <storchaka@gmail.com>